Issue #16 - add short-term fix for unnamed module issue in java 25